--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>There are many things to do while visiting Provence.  Let's explore this region by learning about it's history and events. </p>
       </div>
       </div>
-      <footer>Content and historical nformation gathered from The Lonely Planet and Rick Steve's Europe websites. </footer>
+      <footer>Content and historical information gathered from The Lonely Planet and Rick Steve's Europe websites. </footer>
     </div>
   </body>
 </html>
